--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "repos-for-testing/2048"]
 	path = repos-for-testing/2048
 	url = https://github.com/gabrielecirulli/2048
+[submodule "repos-for-testing/testing_scoreboard_analytics"]
+	path = repos-for-testing/testing_scoreboard_analytics
+	url = https://github.com/qwchua/testing_scoreboard_analytics
