--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "repos-for-testing/testing_scoreboard_analytics"]
 	path = repos-for-testing/testing_scoreboard_analytics
 	url = https://github.com/qwchua/testing_scoreboard_analytics
+[submodule "nanoGPT"]
+	path = nanoGPT
+	url = https://github.com/karpathy/nanoGPT
