add support for saving to pdf and fix bugs with analyzer/database

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "repos-for-testing/testing_scoreboard_analytics"]
 	path = repos-for-testing/testing_scoreboard_analytics
 	url = https://github.com/qwchua/testing_scoreboard_analytics
+[submodule "repos-for-testing/nanoGPT"]
+	path = repos-for-testing/nanoGPT
+	url = https://github.com/karpathy/nanoGPT
+[submodule "repos-for-testing/accelerate"]
+	path = repos-for-testing/accelerate
+	url = https://github.com/huggingface/accelerate
